(lang dune 3.7)

(name camllib)

(generate_opam_files true)

(source
 (github meleagant/camllib))

(authors "Bertrand Jeannet")

(maintainers "Nicolas Berthier <m@nberth.space>")

(license LGPL)

(documentation https://pop-art.inrialpes.fr/people/bjeannet/bjeannet-forge/fixpoint/index.html)

(package
 (name camllib)
 (synopsis "Utility Library")
 (description "Provide implementation of various data structures")
 (depends ocaml dune)
 (tags
  ("graph" "list" "map" "hashtable")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
