(lang dune 3.7)

(name fixpoint)

(generate_opam_files true)

(source
 (github meleagant/fixpoint))

(authors "Bertrand Jeannet")

(maintainers "Maintainer Name")

(license LGPL)

(documentation https://pop-art.inrialpes.fr/people/bjeannet/bjeannet-forge/fixpoint/index.html)

(package
 (name fixpoint)
 (synopsis "Fixpoint computation engine")
 (description "Fixpoint is an OCaml library implementing a generic fixpoint engine. The interface is parameterized by the abstract domain on which fixpoint computations are performed.")
 (depends ocaml dune camllib)
 (tags
  (Fixpoint Graph "Abstract Interpretation")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
