
(library
  (name interproc_lib)
  (wrapped false)
  (modules frontend boolexpr equation options pSpl_syn solving solvingPolicy spl_lex spl_syn spl_yacc syn2equation)
  (flags -w +a-4-6-7-9-27-29-32..42-44-45-48-50-60 )
  (libraries menhirLib apron apron.polkaMPQ apron.boxMPQ apron.octMPQ apron.ppl apron.polkaGrid camllib fixpoint))

(menhir
  (flags --explain --table)
  (modules spl_yacc))

(ocamllex
  (modules spl_lex))
